tdf#138598 SW: fix footer textbox regression

The b6850bbe95418ecfde404be1696548f18d200c9b
(sw compatibility: fix textboxes exceeding the page)
commit caused that the textboxes in footer had
greater size than the footer frame was, dissapeared.
Now the exeption of the footer/header content added
so the earlier state has been restored.

No unit test currently added, but it can be tested with
the following steps:
1 find in Bugzilla the tdf#138598 bug
2 Open its attachement
3 Check the 3rd page has footer content

Before: hidden content
Now: a textbox with a picture

Please note the layout is far not good,
this patch only restored the state before.

Note: The main problem in my opinion is that,
textboxes (shape + textframe) fall apart when
get into header footer. ODT standard does not
support this feature. In the future it is
neccessary to extend this part of the writer
to support textboxes in the header/footer as well.

Change-Id: Id24cd1c77897ecaa4a8eab38cff341dc1d5cb9fb