sw/source/core/objectpositioning/anchoredobjectposition.cxx
@@ -434,10 +434,12 @@ SwTwips SwAnchoredObjectPosition::ImplAdjustVertRelPos( const SwTwips nTopOfAnch
                                                          const bool bCheckBottom ) const
 {
     SwTwips nAdjustedRelPosY = nProposedRelPosY;
-    // TODO: Replace the following condition with the correction
-    // of the implementation of option FollowTextFlow.
     if ( SwAnchoredObject::IsDraggingOffPageAllowed(FindFrameFormat(&mrDrawObj)) &&
-        !(GetAnchorFrame().IsInTab() && DoesObjFollowsTextFlow()) )
+        // tdf138598 do not hide footer/header content
+        GetAnchorFrame().IsInDocBody() &&
+        // TODO: Replace the following condition with the correction
+        // of the implementation of option FollowTextFlow.
+        !(GetAnchorFrame().IsInTab() && DoesObjFollowsTextFlow()))
     {
         return nAdjustedRelPosY;
     }
